5.5/local-manager-user-guide/maintenance-and-troubleshooting/installing-a-fiber-module.md

 
## Installing a Fiber Module     

These instructions apply to both the Uplogix 5000 and Uplogix 500 models.

**Step 1: **Power down the Local Manager and remove the faceplate from the front by removing the screws in the upper-right and lower-left corner.

Note the gray plastic rails that will hold the module card.

![LTE Modem](http://uplogix.com/support/docs/img/lte_modem_install2.jpg)

The SFP is as shown here (this is provided by the customer):


![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-01.jpg)

The module card is as shown here:

![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-02.jpg)

**Step 2:** Insert the module card into the modem slot of the Local Manager, making sure that it is secured within the gray plastic rails.

![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-08.jpg)

Ensure proper alignment with the connector in the back.

![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-09.jpg)

**Step 3: **Attach the faceplate onto the chassis and screw the 2 screws back in the upper-right and lower-left corners. Power up the Local Manager. 

![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-10.jpg)

**Step 4: **Insert the SFP into the slot with the handle facing up. 

![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-12.jpg)

The module should snap into place, and a blinking green light indicates that it is correctly connected. 

![LTE Modem](http://uplogix.com/support/docs/img/SFP-Installation-14.jpg)